# rustVoice

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
Python_SDK/: Exam_Auto_Typer_v3.py  Exam_Auto_Typer_v4.py
apps/rustvoice/: Cargo.toml
apps/rustvoice/src/: audio.rs  decoder.rs  main.rs  transcribe.rs
docs/: AUTO_TYPER_USAGE.md  Issues.md  Progress.md  TODO.md  quick_start.md
sdk/python/: Exam_Auto_Typer_GUI.py  Exam_Auto_Typer_v2.py
v5_rust_typer/src/: model.rs  settings.rs
