[package]
name = "rustvoice"
version = "0.6.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
enigo = "0.3.0"
rdev = "0.5.3"
arboard = "3.4.1"
rand = "0.8.5"
crossbeam-channel = "0.5.13"
tempfile = "3.10.1"
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
parking_lot = "0.12.3"
once_cell = "1.21.3"
lazy_static = "1.5.0"

# Voice transcription (v6 - Candle)
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.19.1"
cpal = "0.15"
rubato = "0.14"
hound = "3.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["blocking", "stream"] }
directories = "5"
anyhow = "1.0"
byteorder = "1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
rfd = "0.16.0"
symphonia = { version = "0.5.5", features = ["all"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
